Changed translation for 'Air Pollution' to 'Air Quality' in Finnish

--- a/po/fi_FI.po
+++ b/po/fi_FI.po
@@ -249,7 +249,7 @@ msgstr "Ukkosmyrsky ja rakeita"
 
 #: src/frontendCardAirPollution.py:44
 msgid "Air Pollution"
-msgstr "Ilman Laatu"
+msgstr "Ilmanlaatu"
 
 #: src/frontendCardAirPollution.py:54
 msgid "United States AQI standard"
